# control-habits

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  Распорядок дня.md
.cursor/rules/: commit-format.mdc  control-habits-context.mdc
.github/workflows/: build-push.yml  ci.yml
alembic/: README  env.py
alembic/versions/: 20250308_001_initial_schema.py  20250310_002_bug_report_drafts.py  20250311_003_time_segments.py
docs/: TODO.md  domain-model.md  index.md  manual-test-cases.md  modules.md  plan.md  prd.md  prompts.md  requirements.md  system-design.md  ui-telegram.md  ui-web.md
docs/ci-deploy/: ci-cd.md  deploy.md
src/control_habits/: __init__.py  config.py
src/control_habits/api/: __init__.py  app.py  deps.py
src/control_habits/auth_linking/: __init__.py  service.py
src/control_habits/bot/: __init__.py  active_handler.py  bug_report_handler.py  fallback_handler.py  hotkey_handler.py  push_callback_handler.py  run.py  start_handler.py
src/control_habits/bot_messages/: __init__.py  hotkeys.py  prompts.py  types.py
src/control_habits/bug_report/: __init__.py  service.py
src/control_habits/hotkey_sessions/: __init__.py  service.py
src/control_habits/planning_engine/: __init__.py  dto.py  jobs.py
src/control_habits/reporting/: __init__.py  dto.py  service.py
src/control_habits/schedule_model/: __init__.py  dto.py  expand.py
src/control_habits/scheduler/: __init__.py  (+1 more)
static/: app.js  index.html  styles.css
tests/: __init__.py  test_bug_report.py  test_smoke.py
(+23 files in other folders)
